# Cup.Properties

./: CMakeLists.txt  Readme.md  ReadmeES.md
Include/Cup/Properties/: Readable.h
Source/: Readable.cpp
Test/: TestReadBinary.cpp
